k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rita-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # To add SSL via LetsEncrypt later, you would add cert-manager annotations here:
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rita-service
                port:
                  number: 80
